--- a/web/error5.html
+++ b/web/error5.html
@@ -43,6 +43,6 @@
 
       </div>
     </div> <!-- / .container -->
-    <footer class="footer-style footer-style-bg text-center">Copyright 2019—2022 FUJITSU All Rights Reserved</footer>
+    <footer class="footer-style footer-style-bg text-center">Copyright 2021—2022 Blu-Label All Rights Reserved</footer>
   </body>
 </html>
