--- a/web/advance.html
+++ b/web/advance.html
@@ -12,8 +12,8 @@
     <meta http-equiv="Pragma" CONTENT="no-cache">
     <meta http-equiv = "X-UA-Compatible" content = "IE=edge,chrome=1" />
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <title>Advanced Query for Ledger Data—Ledger Data Refiner</title>
-    <link rel="icon" href="/static/img/icon.png"/>
+    <title>Advanced Query for Ledger Blu-Label Explorer</title>
+    <link rel="icon" href="/static/img/icon.svg"/>
     <link rel="stylesheet" href="/static/stylesheets/animate.css">
     <!-- Bootstrap 3.3.7 -->
     <link rel="stylesheet" href="/static/bootstrap/dist/css/bootstrap.min.css">
@@ -47,7 +47,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </button>
-                  <a class="navbar-brand"><span>Ledger</span><span class="logo-d"></span><span>ata</span><br/>Refiner</a>
+                  <a class="navbar-brand"><span class="logo-d"></span>Explorer</a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -222,7 +222,7 @@
       <br />
       <br />
       <br />
-      <footer class="footer-style text-center">Copyright 2019—2022 FUJITSU All Rights Reserved</footer>
+      <footer class="footer-style text-center">Copyright 2021—2022 Blu-Label All Rights Reserved</footer>
     </section>
 
     <!-- Modal -->
